syntax = "proto3";

option csharp_namespace = "TableDataBaseServerService";

import "google/protobuf/empty.proto";

package databaseservice;

service TableDataBaseServise {

		rpc AddJsonDbObjectSchema(AddJsonDbObjectSchemaRequest) returns (google.protobuf.Empty);
		rpc RemoveJsonDbObjectSchemaByName(RemoveJsonDbObjectSchemaByNameRequest) returns (google.protobuf.Empty);
        rpc GetDbObjectByName(GetDbObjectByNameRequest) returns (DataBaseReply);
        rpc GetAllDbObjects(google.protobuf.Empty) returns (ListDataBaseReply);
		rpc UpdateJsonDbObjectSchema(UpdateJsonDbObjectSchemaRequest) returns (google.protobuf.Empty);

        rpc AddTable(AddTableRequest) returns (google.protobuf.Empty);
        rpc RemoveTableByName(RemoveTableByNameRequest) returns (google.protobuf.Empty);
        rpc GetTableByName(GetTableByNameRequest) returns (TableReply);
        rpc GetAllTablesByDbName(GetAllTablesByDbNameRequest) returns (ListTableReply);
        rpc UpdateTable(UpdateTableRequest) returns (google.protobuf.Empty);

        rpc AddAttributeProperty(AddAttributePropertyRequest) returns (google.protobuf.Empty);
        rpc RemoveAttributePropertyByName(RemoveAttributePropertyByNameRequest) returns (google.protobuf.Empty);
        rpc GetAttributePropertyByName(GetAttributePropertyByNameRequest) returns (AttributePropertyReply);
		rpc GetAllAttributePropertiesByDbTableName(GetAllAttributePropertiesByDbTableNameRequest) returns (ListAttributePropertyReply);
        rpc UpdateAttributeProperty(UpdateAttributePropertyRequest) returns (google.protobuf.Empty);

        rpc GetDbFileNameByName(GetDbFileNameByNameRequest) returns (StringReply);
        rpc GetDbFilePath(google.protobuf.Empty) returns (StringReply);

        rpc AddField(AddFieldRequest) returns (google.protobuf.Empty);
		rpc RemoveFieldByGuid(RemoveFieldByGuidRequest) returns (google.protobuf.Empty);
		rpc GetFieldByGuid(GetFieldByGuidRequest) returns (TableFieldReply);
		rpc GetAllFieldsByTableName(GetAllFieldsByTableNameRequest) returns (ListTableFieldReply);
		rpc UpdateField(UpdateFieldRequest) returns (google.protobuf.Empty);

		rpc UpdateValue(UpdateValueRequest) returns (google.protobuf.Empty);
}

message AddJsonDbObjectSchemaRequest
{
    string name = 1;
	repeated TableReply tables = 2;
}

message RemoveJsonDbObjectSchemaByNameRequest
{
	string name = 1; 
}

message GetDbObjectByNameRequest
{
	string name = 1; 
}

message UpdateJsonDbObjectSchemaRequest
{
    string name = 1;
	repeated TableReply Tables = 2;
}

message AddTableRequest
{
	TableReply Table = 1; 
    string dbName = 2;
}

message RemoveTableByNameRequest
{
	string name = 1;
    string dbName = 2; 
}

message GetTableByNameRequest
{
	string name = 1;
    string dbName = 2; 
}

message GetAllTablesByDbNameRequest
{
    string dbName = 1;
}

message UpdateTableRequest
{
	TableReply Table = 1; 
    string dbName = 2;
}

message AddAttributePropertyRequest
{
    AttributePropertyReply attributePropertyReply = 1;
	string tableName = 2;
    string dbName = 3; 
}

message RemoveAttributePropertyByNameRequest
{
	string name = 1;
	string tableName = 2;
    string dbName = 3; 
}

message GetAttributePropertyByNameRequest
{
	string name = 1;
	string tableName = 2;
    string dbName = 3; 
}

message GetAllAttributePropertiesByDbTableNameRequest
{
	string tableName = 1;
    string dbName = 2; 
}

message UpdateAttributePropertyRequest
{
    AttributePropertyReply attributePropertyReply = 1;
	string tableName = 2;
    string dbName = 3; 
}

message GetDbFileNameByNameRequest
{
	string name = 1; 
}

message DataBaseReply
{
	string name = 1; 
	repeated TableReply tables = 2;
}

message ListDataBaseReply
{
	repeated DataBaseReply dataBases = 1;
}

message TableReply
{
    string name = 1;
	repeated AttributePropertyReply attributeProperties = 2;
}

message ListTableReply
{
	repeated TableReply tables = 1;
}

message AttributePropertyReply
{
    string name = 1;
	int32 attributeType = 2;
    string relationTableGuid = 3;
}

message ListAttributePropertyReply
{
	repeated AttributePropertyReply attributeProperties = 3;
}

message StringReply
{
	string stringValue = 1;
}

message AddFieldRequest{
	string guid = 1;
	string tableName = 2;
	repeated ValueReply values = 3;
	string dbName = 4; 
}

message RemoveFieldByGuidRequest{
	string guid = 1;
	string dbName = 2; 
}

message GetFieldByGuidRequest{
	string guid = 1;
	string dbName = 2; 
}

message GetAllFieldsByTableNameRequest{
	string tableName = 1;
	string dbName = 2; 
}

message UpdateFieldRequest{
	string guid = 1;
	string tableName = 2;
	repeated ValueReply values = 3;
	string dbName = 4; 
}

message UpdateValueRequest{
	string value = 1;
	string attributePropertyName = 2;
	string fieldGuid = 3;
	string dbName = 4; 
}

message ValueReply{
	string name = 1;
	string value = 2;
}

message TableFieldReply{
	string guid = 1;
	string tableName = 2;
	repeated ValueReply values = 3;
}

message ListTableFieldReply{
	repeated TableFieldReply tableFields = 1;
}